--- a/.github/workflows/luris-ticket-ru.yml
+++ b/.github/workflows/luris-ticket-ru.yml
@@ -53,12 +53,12 @@ jobs:
 
           cd ..
 
-          RUN_ID=${{ github.run_id }}
-          for file in ./kube/*; do
+          export RUN_ID=${{ github.run_id }}
+          for file in ./Kube/*; do
             echo "Applying $file"
             cat $file |envsubst | kubectl apply -f -
           done
-          
+
 ##################################################################################################
 
 
