--- a/.github/workflows/pull-request-work.yml
+++ b/.github/workflows/pull-request-work.yml
@@ -14,7 +14,18 @@ jobs:
         run: |
             export PUL_REQUEST_ID=${{github.event.pull_request.number}}
             echo $PULL_REQUEST_ID
-            kubectl create namespace luris-pr$PULL_REQUEST_ID || true
+            export RUN_SALT="pr${PULL_REQUEST_ID}- ${GITHUB_RUN_ID}"
+            export NAMESPACE="luris-pr$PULL_REQUEST_ID"
 
-            kubectl -n luris-pr$PULL_REQUEST_ID delete configmap blazor-web-postgres-init || true
-            kubectl -n luris-pr$PULL_REQUEST_ID create configmap blazor-web-postgres-init --from-file=init.sql
+            kubectl create $NAMESPACE luris-pr$PULL_REQUEST_ID || true
+
+            kubectl -n $NAMESPACE delete configmap blazor-web-postgres-init || true
+            kubectl -n $NAMESPACE  create configmap blazor-web-postgres-init --from-file=init.sql
+
+            docker build -t 144.17.92.12:5000/luris/blazor-web:pr-$RUN_SALT .
+            docker push 144.17.92.12:5000/luris/blazor-web:$RUN_SALT
+
+            for file in ./kube-pr-configs/*; do
+                echo "Applying $file"
+                cat $file |envsubst | kubectl apply -f -
+            done
